@@ -76,3 +76,21 @@ jeedom.interact.save = function(_params) {
     };
     $.ajax(paramsAJAX);
 }
+
+jeedom.interact.regenerateInteract = function(_params) {
+    var paramsRequired = [];
+    var paramsSpecifics = {};
+    try {
+        jeedom.private.checkParamsRequired(_params || {}, paramsRequired);
+    } catch (e) {
+        (_params.error || paramsSpecifics.error || jeedom.private.default_params.error)(e);
+        return;
+    }
+    var params = $.extend({}, jeedom.private.default_params, paramsSpecifics, _params || {});
+    var paramsAJAX = jeedom.private.getParamsAJAX(params);
+    paramsAJAX.url = 'core/ajax/interact.ajax.php';
+    paramsAJAX.data = {
+        action: 'regenerateInteract',
+    };
+    $.ajax(paramsAJAX);
+}
