@@ -1,3 +1,7 @@
+*28/01/2015* _v1.161.0_
+
+- Ajout d'un bouton pour regénerer toutes les interactions
+
 *26/01/2015* _v1.161.0_
 
 - Ajout fonction averageBetween, maxBetween et minBetween pour les scénarios
